Update 3.01 Research, implement, and manage engineering processes using secure design principles.md

--- a/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
@@ -352,13 +352,14 @@ When designing secure systems, it’s crucial to consider how they will respond 
 | **Fail-Open**   | System remains accessible when an error occurs.                                               | Availability        | An access control system in a hospital unlocks doors during failure to allow emergency access.    |
 | **Fail-Secure** | System blocks access when an error occurs.                                                   | Security            | A firewall failure results in all traffic being blocked to prevent unauthorized access.           |
 
-:brain: Fail-safe protects people, while fail-secure protects assets. The right choice depends on the system’s purpose and risk considerations. People's safety has always to be our first priority.
+:brain: “Fail-safe” is broader — it means the system fails in a way that minimizes harm to people, systems, or the environment.
+In cybersecurity, fail-safe usually leans toward fail-secure, but in safety-critical systems (like hospitals or factories), it might mean fail-open to ensure human safety.
 
-A key principle tied to this is default deny—which means that unless explicitly allowed, actions should be blocked. This is why firewalls often start with a "deny all" rule, requiring administrators to explicitly permit necessary traffic. Similarly, access to sensitive data should be granted only to authorized users instead of trying to block unauthorized ones reactively.
+A key principle tied to this is **default deny**—which means that unless explicitly allowed, actions should be blocked. This is why firewalls often start with a "deny all" rule, requiring administrators to explicitly permit necessary traffic. Similarly, access to sensitive data should be granted only to authorized users instead of trying to block unauthorized ones reactively.
 
 In general, security-focused systems should favor fail-secure designs to prevent unauthorized access, even in the event of an error. However, in some cases, availability is so critical that a fail-open design may be necessary. The right approach depends on the system’s purpose and the balance between security and usability.
 
-:bulb: The try...catch mechanism in programming is used to handle errors gracefully by attempting to execute a block of code (try) and catching exceptions (catch) to prevent the application from crashing. It ensures that when an error occurs, the system does not expose sensitive data or weaken security— instead, it follows a controlled failure path, maintaining security protections even in unexpected situations.
+:bulb: The **try...catch** mechanism in programming is used to handle errors gracefully by attempting to execute a block of code (try) and catching exceptions (catch) to prevent the application from crashing. It ensures that when an error occurs, the system does not expose sensitive data or weaken security— instead, it follows a controlled failure path, maintaining security protections even in unexpected situations.
 
 ### Open Questions ###
 
