Update 3.01 Research, implement, and manage engineering processes using secure design principles.md

--- a/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
@@ -400,23 +400,23 @@ For example,  a security administrator responsible for setting user permissions 
 
 1. What is the primary purpose of Segregation of Duties (SoD) in information security?
 
-<details> <summary>Show answer</summary> The primary purpose of SoD is to **reduce the risk of fraud, errors, and unauthorized actions** by ensuring that no single individual has full control over a critical process. Responsibilities are divided among multiple people to maintain checks and balances. </details>
+<details> <summary>Show answer</summary> The primary purpose of SoD is to reduce the risk of fraud, errors, and unauthorized actions by ensuring that no single individual has full control over a critical process. Responsibilities are divided among multiple people to maintain checks and balances. </details>
 
 2. How does Segregation of Duties help prevent security breaches or fraud?
 
-<details> <summary>Show answer</summary> By dividing key responsibilities, SoD ensures that **malicious or negligent actions require collusion** between two or more individuals. This makes it harder for one person to manipulate systems, commit fraud, or hide unauthorized activities. </details>
+<details> <summary>Show answer</summary> By dividing key responsibilities, SoD ensures that malicious or negligent actions require collusion between two or more individuals. This makes it harder for one person to manipulate systems, commit fraud, or hide unauthorized activities. </details>
 
 3. Give an example of how poor segregation of duties could lead to a security issue.
 
-<details> <summary>Show answer</summary> If a security administrator who assigns user permissions is also responsible for reviewing audit logs, they could **grant themselves unauthorized access** and then delete or alter the logs to hide their actions. Separating these roles prevents such abuse. </details>
+<details> <summary>Show answer</summary> If a security administrator who assigns user permissions is also responsible for reviewing audit logs, they could grant themselves unauthorized access and then delete or alter the logs to hide their actions. Separating these roles prevents such abuse. </details>
 
 4. What is the main difference between segregation of duties and the principle of least privilege?
 
-<details> <summary>Show answer</summary> While **least privilege** limits the access rights of each user to only what’s necessary for their job, **segregation of duties** focuses on dividing tasks among multiple people to prevent any one individual from having unchecked power over a process. </details>
+<details> <summary>Show answer</summary> While least privilege limits the access rights of each user to only what’s necessary for their job, **segregation of duties** focuses on dividing tasks among multiple people to prevent any one individual from having unchecked power over a process. </details>
 
 5. In what type of organizational process is Segregation of Duties most critical?
 
-<details> <summary>Show answer</summary> SoD is most critical in **financial, administrative, and security-sensitive processes**, such as approving transactions, managing user access, or deploying code changes—where a lack of oversight could result in fraud, errors, or security breaches. </details>
+<details> <summary>Show answer</summary> SoD is most critical in financial, administrative, and security-sensitive processes, such as approving transactions, managing user access, or deploying code changes—where a lack of oversight could result in fraud, errors, or security breaches. </details>
 
 ---
 
@@ -454,23 +454,23 @@ For example, consider a company setting up a firewall to protect its network. In
 
 1. What is the main goal of the Keep It Simple and Small (KISS) principle in cybersecurity?
 
-<details> <summary>Show answer</summary> The KISS principle aims to **reduce system complexity** by designing simple, minimal, and efficient security controls. Simplicity helps decrease vulnerabilities, ease maintenance, and improve reliability by reducing the number of components and potential failure points. </details>
+<details> <summary>Show answer</summary> The KISS principle aims to reduce system complexity by designing simple, minimal, and efficient security controls. Simplicity helps decrease vulnerabilities, ease maintenance, and improve reliability by reducing the number of components and potential failure points. </details>
 
 2. Why does system complexity increase security risks?
 
-<details> <summary>Show answer</summary> Complex systems have **more code, configurations, and dependencies**, which expand the attack surface and create more opportunities for bugs, misconfigurations, and human errors. A simpler system is easier to secure, test, and audit. </details>
+<details> <summary>Show answer</summary> Complex systems have more code, configurations, and dependencies, which expand the attack surface and create more opportunities for bugs, misconfigurations, and human errors. A simpler system is easier to secure, test, and audit. </details>
 
 3. How does the KISS principle improve system performance and reliability?
 
-<details> <summary>Show answer</summary> Simpler systems typically require **fewer resources and interdependencies**, making them faster, more efficient, and less prone to failure. They are also easier to troubleshoot and recover, which enhances both performance and reliability. </details>
+<details> <summary>Show answer</summary> Simpler systems typically require fewer resources and interdependencies, making them faster, more efficient, and less prone to failure. They are also easier to troubleshoot and recover, which enhances both performance and reliability. </details>
 
 4. What is YAGNI, and how does it relate to the KISS principle?
 
-<details> <summary>Show answer</summary> **YAGNI (You Ain’t Gonna Need It)** advises developers to avoid adding features that are not immediately necessary. It aligns with the KISS principle by discouraging unnecessary complexity and focusing only on essential functionality to keep systems simple and secure. </details>
+<details> <summary>Show answer</summary> YAGNI (You Ain’t Gonna Need It) advises developers to avoid adding features that are not immediately necessary. It aligns with the KISS principle by discouraging unnecessary complexity and focusing only on essential functionality to keep systems simple and secure. </details>
 
 5. How does the Rule of Least Power contribute to simpler and more secure systems?
 
-<details> <summary>Show answer</summary> The **Rule of Least Power** recommends using the least powerful language or technology needed for a task. Simpler tools—like static HTML instead of JavaScript—are easier to secure, maintain, and analyze, supporting the KISS principle’s goal of minimizing complexity and risk. </details>
+<details> <summary>Show answer</summary> The Rule of Least Power*recommends using the least powerful language or technology needed for a task. Simpler tools—like static HTML instead of JavaScript—are easier to secure, maintain, and analyze, supporting the KISS principle’s goal of minimizing complexity and risk. </details>
 
 
 ---
@@ -517,23 +517,23 @@ For example, imagine an organization where employees use VPN access to work remo
 
 1. What is the main idea behind the Zero Trust security model?
 
-<details> <summary>Show answer</summary> Zero Trust is based on the principle that **no user or device should be trusted by default**, whether inside or outside the network. Every request must be verified explicitly through authentication, authorization, and continuous validation to prevent unauthorized access and lateral movement. </details>
+<details> <summary>Show answer</summary> Zero Trust is based on the principle that no user or device should be trusted by default, whether inside or outside the network. Every request must be verified explicitly through authentication, authorization, and continuous validation to prevent unauthorized access and lateral movement. </details>
 
 2. How does the “Assume Breach” mindset strengthen security in a Zero Trust architecture?
 
-<details> <summary>Show answer</summary> “Assume Breach” means designing systems under the assumption that attackers may already be inside the network. This leads to **stronger monitoring, isolation, and containment controls**, reducing the potential damage if a compromise occurs. </details>
+<details> <summary>Show answer</summary> “Assume Breach” means designing systems under the assumption that attackers may already be inside the network. This leads to stronger monitoring, isolation, and containment controls, reducing the potential damage if a compromise occurs. </details>
 
 3. What role does micro-segmentation play in a Zero Trust environment?
 
-<details> <summary>Show answer</summary> Micro-segmentation divides a network into **smaller, isolated zones**, limiting how far an attacker can move laterally after a breach. Each segment has its own access policies, helping contain threats and minimize exposure. </details>
+<details> <summary>Show answer</summary> Micro-segmentation divides a network into smaller, isolated zones, limiting how far an attacker can move laterally after a breach. Each segment has its own access policies, helping contain threats and minimize exposure. </details>
 
 4. How does the “Trust but Verify” principle differ from Zero Trust?
 
-<details> <summary>Show answer</summary> “Trust but Verify” allows conditional access after trust is granted but continues to monitor for risks, while **Zero Trust eliminates implicit trust entirely**. In Zero Trust, every action is continuously verified, even for authenticated users or devices. </details>
+<details> <summary>Show answer</summary> “Trust but Verify” allows conditional access after trust is granted but continues to monitor for risks, while Zero Trust eliminates implicit trust entirely. In Zero Trust, every action is continuously verified, even for authenticated users or devices. </details>
 
 5. What technologies are commonly used to implement Zero Trust and Trust but Verify models?
 
-<details> <summary>Show answer</summary> Common technologies include **Multi-Factor Authentication (MFA)**, **Role-Based Access Control (RBAC)**, **Security Information and Event Management (SIEM)** for monitoring, and **endpoint compliance checks** to verify device health and user behavior continuously. </details>
+<details> <summary>Show answer</summary> Common technologies include Multi-Factor Authentication (MFA), Role-Based Access Control (RBAC), Security Information and Event Management (SIEM) for monitoring, and endpoint compliance checks to verify device health and user behavior continuously. </details>
 
 
 ---
@@ -574,23 +574,23 @@ Let’s consider the example of a healthcare app that collects and processes sen
 
 1. What is the main purpose of the Privacy by Design principle?
 
-<details> <summary>Show answer</summary> Privacy by Design ensures that **privacy protections are integrated into systems and processes from the very beginning**, rather than being added later. It embeds privacy considerations throughout the entire lifecycle of a product or service to prevent data misuse and enhance user trust. </details>
+<details> <summary>Show answer</summary> Privacy by Design ensures that privacy protections are integrated into systems and processes from the very beginning, rather than being added later. It embeds privacy considerations throughout the entire lifecycle of a product or service to prevent data misuse and enhance user trust. </details>
 
 2. How does the principle of data minimization support Privacy by Design?
 
-<details> <summary>Show answer</summary> Data minimization means collecting, storing, and processing **only the personal data necessary** to achieve a specific purpose. This reduces exposure risk, simplifies security management, and aligns with privacy regulations by limiting unnecessary data handling. </details>
+<details> <summary>Show answer</summary> Data minimization means collecting, storing, and processing only the personal data necessary to achieve a specific purpose. This reduces exposure risk, simplifies security management, and aligns with privacy regulations by limiting unnecessary data handling. </details>
 
 3. Why are default privacy settings important in Privacy by Design?
 
-<details> <summary>Show answer</summary> Default privacy settings ensure that systems are **configured with maximum privacy protection by default**, without requiring users to change settings manually. This prevents accidental data exposure and aligns with the “secure by default” approach. </details>
+<details> <summary>Show answer</summary> Default privacy settings ensure that systems are configured with maximum privacy protection by default, without requiring users to change settings manually. This prevents accidental data exposure and aligns with the “secure by default” approach. </details>
 
 4. What does end-to-end security mean in the context of Privacy by Design?
 
-<details> <summary>Show answer</summary> End-to-end security involves protecting personal data **throughout its entire lifecycle**—from collection and storage to transmission and disposal. It relies on strong encryption, access controls, and regular audits to ensure continuous data protection. </details>
+<details> <summary>Show answer</summary> End-to-end security involves protecting personal data throughout its entire lifecycle—from collection and storage to transmission and disposal. It relies on strong encryption, access controls, and regular audits to ensure continuous data protection. </details>
 
 5. How do transparency and user control contribute to Privacy by Design?
 
-<details> <summary>Show answer</summary> Transparency ensures users **understand how their data is collected, used, and shared**, while user control allows them to **access, modify, or delete their personal data**. Together, these elements build trust and promote compliance with privacy laws such as GDPR. </details>
+<details> <summary>Show answer</summary> Transparency ensures users understand how their data is collected, used, and shared, while user control allows them to access, modify, or delete their personal data. Together, these elements build trust and promote compliance with privacy laws such as GDPR. </details>
 
 ---
 
@@ -617,23 +617,23 @@ Key Aspects of Shared Responsibility:
 
 1. What does the principle of shared responsibility in cybersecurity mean?
 
-<details> <summary>Show answer</summary> The shared responsibility principle means that **security is a joint effort** between service providers and customers. Each party has defined duties: providers secure the underlying infrastructure, while customers secure their data, configurations, and applications. This collaboration ensures complete coverage without security gaps. </details>
+<details> <summary>Show answer</summary> The shared responsibility principle means that security is a joint effort between service providers and customers. Each party has defined duties: providers secure the underlying infrastructure, while customers secure their data, configurations, and applications. This collaboration ensures complete coverage without security gaps. </details>
 
 2. What are the main security responsibilities of a cloud service provider?
 
-<details> <summary>Show answer</summary> The service provider is responsible for securing the **physical and virtual infrastructure**, including data centers, networking, storage, hypervisors, and base platform software. They must ensure hardware reliability, patch management, and regulatory compliance at the infrastructure level. </details>
+<details> <summary>Show answer</summary> The service provider is responsible for securing the physical and virtual infrastructure, including data centers, networking, storage, hypervisors, and base platform software. They must ensure hardware reliability, patch management, and regulatory compliance at the infrastructure level. </details>
 
 3. What are the typical responsibilities of a customer under the shared responsibility model?
 
-<details> <summary>Show answer</summary> The customer manages **everything built on top of the provider’s infrastructure**, such as operating systems, data protection, identity and access management, application security, and proper configuration of cloud resources. Customers must also implement strong authentication and data encryption. </details>
+<details> <summary>Show answer</summary> The customer manages everything built on top of the provider’s infrastructure, such as operating systems, data protection, identity and access management, application security, and proper configuration of cloud resources. Customers must also implement strong authentication and data encryption. </details>
 
 4. Why is a clear division of responsibilities critical in cloud security?
 
-<details> <summary>Show answer</summary> A clear division prevents **security blind spots** where both parties assume the other is responsible. By defining who secures each layer—such as infrastructure vs. applications—organizations can avoid misconfigurations and improve accountability and control. </details>
+<details> <summary>Show answer</summary> A clear division prevents security blind spots where both parties assume the other is responsible. By defining who secures each layer—such as infrastructure vs. applications—organizations can avoid misconfigurations and improve accountability and control. </details>
 
 5. How are shared responsibilities usually formalized between providers and customers?
 
-<details> <summary>Show answer</summary> Shared responsibilities are often defined through **contracts, SLAs, and security documentation**, which outline roles, controls, and reporting requirements. These agreements ensure transparency and alignment on security expectations, reducing the risk of misunderstandings or compliance failures. </details>
+<details> <summary>Show answer</summary> Shared responsibilities are often defined through contracts, SLAs, and security documentation, which outline roles, controls, and reporting requirements. These agreements ensure transparency and alignment on security expectations, reducing the risk of misunderstandings or compliance failures. </details>
 
 
 ---
@@ -658,22 +658,22 @@ Key Principles of SASE are:
 
 1. What is Secure Access Service Edge (SASE)?
 
-<details> <summary>Show answer</summary> Secure Access Service Edge (SASE) is a **cloud-based cybersecurity framework** that merges network security and wide-area networking (WAN) into a unified service. It provides secure and optimized access to applications and data regardless of where users or devices are located. </details>
+<details> <summary>Show answer</summary> Secure Access Service Edge (SASE) is a cloud-based cybersecurity framework that merges network security and wide-area networking (WAN) into a unified service. It provides secure and optimized access to applications and data regardless of where users or devices are located. </details>
 
 2. What problem does SASE aim to solve for modern organizations?
 
-<details> <summary>Show answer</summary> SASE addresses the challenge of **securing remote users and cloud-based applications** in a distributed IT environment. It eliminates the need to backhaul traffic through data centers and ensures consistent security policies across all users and locations. </details>
+<details> <summary>Show answer</summary> SASE addresses the challenge of securing remote users and cloud-based applications in a distributed IT environment. It eliminates the need to backhaul traffic through data centers and ensures consistent security policies across all users and locations. </details>
 
 3. What are the main security functions integrated into a SASE framework?
 
-<details> <summary>Show answer</summary> SASE combines multiple security services such as **Secure Web Gateway (SWG)**, **Cloud Access Security Broker (CASB)**, **Firewall as a Service (FWaaS)**, and **Data Loss Prevention (DLP)** into a single cloud-delivered solution, simplifying management and improving protection. </details>
+<details> <summary>Show answer</summary> SASE combines multiple security services such as Secure Web Gateway (SWG), Cloud Access Security Broker (CASB), Firewall as a Service (FWaaS), and Data Loss Prevention (DLP) into a single cloud-delivered solution, simplifying management and improving protection. </details>
 
 4. How does SASE ensure secure access to applications and data?
 
-<details> <summary>Show answer</summary> SASE applies **Zero Trust Network Access (ZTNA)** principles, requiring authentication and continuous verification of users and devices before granting access. Access decisions are based on identity, device posture, and context rather than network location. </details>
+<details> <summary>Show answer</summary> SASE applies Zero Trust Network Access (ZTNA) principles, requiring authentication and continuous verification of users and devices before granting access. Access decisions are based on identity, device posture, and context rather than network location. </details>
 
 5. What are the main benefits of SASE for organizations with a remote or hybrid workforce?
 
-<details> <summary>Show answer</summary> SASE provides **global reach with local performance** through distributed cloud Points of Presence (PoPs). It enhances user experience by reducing latency while maintaining strong, identity-based security controls—making it ideal for hybrid and remote work environments. </details>
+<details> <summary>Show answer</summary> SASE provides global reach with local performance through distributed cloud Points of Presence (PoPs). It enhances user experience by reducing latency while maintaining strong, identity-based security controls—making it ideal for hybrid and remote work environments. </details>
 
 ---
