Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula).md
@@ -455,7 +455,7 @@ flowchart TD
 
 ```
 
-The *Brewer and Nash Model* is a conflict-of-interest security model designed to prevent users from accessing data that could create an ethical conflict. It ensures that a user cannot access sensitive information from competing organizations, preventing insider trading, financial conflicts, or biased decision-making.
+The **Brewer and Nash Model** is a conflict-of-interest security model designed to prevent users from accessing data that could create an ethical conflict. It ensures that a user cannot access sensitive information from competing organizations, preventing insider trading, financial conflicts, or biased decision-making.
 
 Key Concepts of the Brewer and Nash Model are:
 - Goal: Prevent conflicts of interest by restricting users from accessing data from competing organizations.
