Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -337,7 +337,7 @@ Quantum algorithms like Shor’s algorithm could break widely used public-key sy
 
 ---
 
-## Public key infrastructure (PKI)  (e.g., quantum key distribution) ##
+## 3.6.3 Public key infrastructure (PKI)  (e.g., quantum key distribution) ##
 
 Public Key Infrastructure (PKI) is the foundation of secure digital communication. It provides a framework for managing encryption keys and digital certificates, ensuring authentication, confidentiality, integrity, and non-repudiation in online interactions. PKI enables secure data exchange by using asymmetric cryptography, which relies on a pair of public and private keys. It is widely used in securing websites, emails, documents, and even entire network infrastructures.
 
