Update 3.09 Design site and facility security controls.md

--- a/DOMAIN3: Security Architecture and Engineering/3.09 Design site and facility security controls.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.09 Design site and facility security controls.md
@@ -62,7 +62,7 @@ UL 514C → Safety and durability of outlet boxes.
 
 ---
 
-## 3.9.2 3.9.2 Server rooms/data centers ##
+## 3.9.2 Server rooms/data centers ##
 
 Server rooms and data centers are the backbone of an organization’s IT infrastructure, housing the servers, networking equipment, and storage systems that support critical business operations. These facilities are designed to store and manage large volumes of data while ensuring continuous, uninterrupted service. A well-designed server room or data center is essential not only for maintaining operational efficiency but also for ensuring the security, scalability, and reliability of the organization’s technological infrastructure.
 
