Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula).md
@@ -232,11 +232,11 @@ Key Concepts of Bell–LaPadula:
 
 The core Security rules of the model are:
 
-1️. No Read Up (Simple Security Property): Users cannot read data at a higher security level than their own. Prevents unauthorized users from accessing classified information. Example: A Secret-level analyst cannot read a Top Secret file.
+1️. *No Read Up (Simple Security Property)*: Users cannot read data at a higher security level than their own. Prevents unauthorized users from accessing classified information. Example: A Secret-level analyst cannot read a Top Secret file.
 
-2️. No Write Down (Star Property, -Property): Users cannot write to a lower security level. Prevents leaks of sensitive information by blocking downgrades. Example: A Top Secret officer cannot save a classified report in an Unclassified document.
+2️. *No Write Down (Star Property, -Property)*: Users cannot write to a lower security level. Prevents leaks of sensitive information by blocking downgrades. Example: A Top Secret officer cannot save a classified report in an Unclassified document.
 
-3️. Discretionary Security Property (ds-property): Enforces additional access restrictions based on permissions set by the data owner. Even if a user has the right security level, they must also be granted access. Example: A Secret user cannot access a Secret document unless they have explicit permission.
+3️. *Discretionary Security Property (ds-property)*: Enforces additional access restrictions based on permissions set by the data owner. Even if a user has the right security level, they must also be granted access. Example: A Secret user cannot access a Secret document unless they have explicit permission.
 
 Strengths  of the model:
 - Enforces strict confidentiality (ideal for government/military).
@@ -293,9 +293,9 @@ Key Concepts of the Biba Model
 
 The Core Security Rules of the Biba Model are:
 
-1. No Write Up (Simple Integrity Property). Users cannot write data at a higher integrity level than their own. Prevents untrusted users from modifying critical data.
+1. *No Write Up (Simple Integrity Property).* Users cannot write data at a higher integrity level than their own. Prevents untrusted users from modifying critical data.
 
-2. No Read Down (Star Integrity Property, -Property). Users cannot read data at a lower integrity level. Prevents contamination of high-integrity data by unreliable sources.
+2. *No Read Down (Star Integrity Property, -Property).* Users cannot read data at a lower integrity level. Prevents contamination of high-integrity data by unreliable sources.
 
 Strengths of the model:
 
