Update 3.03 Select Controls based upon system security requirements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
@@ -11,9 +11,9 @@ Security controls are essential for ensuring that IT systems meet security objec
 | Class    | Description                                                                                             |
 |----------|---------------------------------------------------------------------------------------------------------|
 | **D**    | Minimal protection: reserved for systems evaluated but failing to qualify for higher classes :contentReference[oaicite:1]{index=1} |
-| **C1 & C2** | Discretionary protection (DAC):<br>– **C1**: basic Discretionary Access Control with user/data separation and identification/authentication;<br>– **C2**: finer‑grained DAC, individual login accountability, auditing, object reuse, and resource isolation :contentReference[oaicite:2]{index=2} |
-| **B1–B3** | Mandatory protection (MAC) and security labeling:<br>– **B1**: labeled security protection with informal policy model and mandatory labeling;<br>– **B2**: structured protection—formal security policy model, covert‑channel analysis, strengthened authentication, configuration management;<br>– **B3**: security domains—reference‑monitor properties (tamper‑proof, complete mediation, analyzable), minimized trusted code, intrusion detection, trusted recovery procedures :contentReference[oaicite:3]{index=3} |
-| **A1**   | Verified design: functionally equivalent to B3 but adds formal top‑level specification and formal verification methods for design and implementation, trusted distribution, and rigorous assurance techniques :contentReference[oaicite:4]{index=4} |
+| **C1 & C2** | Discretionary protection (DAC):<br>– **C1**: basic Discretionary Access Control with user/data separation and identification/authentication;<br>– **C2**: finer‑grained DAC, individual login accountability, auditing, object reuse, and resource isolation |
+| **B1–B3** | Mandatory protection (MAC) and security labeling:<br>– **B1**: labeled security protection with informal policy model and mandatory labeling;<br>– **B2**: structured protection—formal security policy model, covert‑channel analysis, strengthened authentication, configuration management;<br>– **B3**: security domains—reference‑monitor properties (tamper‑proof, complete mediation, analyzable), minimized trusted code, intrusion detection, trusted recovery procedures |
+| **A1**   | Verified design: functionally equivalent to B3 but adds formal top‑level specification and formal verification methods for design and implementation, trusted distribution, and rigorous assurance techniques  |
 
 **ITSEC** was created by European countries to improve upon TCSEC. Unlike TCSEC, ITSEC:
 
