Update 3.03 Select Controls based upon system security requirements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
@@ -89,7 +89,7 @@ Common Criteria is widely used in government procurement, financial institutions
 
 ---
 
-Security frameworks are structured sets of guidelines, standards, and best practices that help organizations manage and protect their information systems. They offer a systematic approach to risk management, ensuring that security controls are properly implemented, maintained, and continually improved. By providing a blueprint for establishing a secure environment, these frameworks assist organizations in meeting regulatory requirements, reducing vulnerabilities, and safeguarding critical assets.
+**Security frameworks** are structured sets of guidelines, standards, and best practices that help organizations manage and protect their information systems. They offer a systematic approach to risk management, ensuring that security controls are properly implemented, maintained, and continually improved. By providing a blueprint for establishing a secure environment, these frameworks assist organizations in meeting regulatory requirements, reducing vulnerabilities, and safeguarding critical assets.
 
 At their core, security frameworks outline processes for identifying risks, selecting appropriate controls, and monitoring the effectiveness of these controls. They typically include:
 
