Update 3.04 Understand Security Capabilities of Information Systems (e.g. memory protection, TPM, …).md

--- a/DOMAIN3: Security Architecture and Engineering/3.04 Understand Security Capabilities of Information Systems (e.g. memory protection, TPM, …).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.04 Understand Security Capabilities of Information Systems (e.g. memory protection, TPM, …).md
@@ -35,6 +35,17 @@ TPM exists in 2 different versions:
 
 The following table recaps benefits and limitations of TPMs:
 
+| **Aspect**                         | **Benefits**                                                                                          | **Limitations**                                                                              |
+| ---------------------------------- | ----------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------- |
+| **Boot Integrity**                 | Measures and verifies boot components to detect unauthorized changes before OS loads (measured boot). | Cannot prevent tampering by itself — only detects it.                                        |
+| **Key Protection**                 | Stores cryptographic keys securely in hardware, resistant to software-based attacks.                  | Keys are tied to the physical device — recovery is complex if the motherboard or TPM fails.  |
+| **Disk Encryption Support**        | Enhances tools like BitLocker by ensuring keys are released only if system integrity is verified.     | Dependent on OS or software integration; TPM alone doesn’t encrypt data.                     |
+| **Attestation**                    | Provides cryptographic proof that the system booted into a trusted state.                             | Remote attestation requires supporting infrastructure (e.g., servers, policies).             |
+| **Resistance to Physical Attacks** | Hardware-based design provides strong protection against key extraction.                              | Can still be vulnerable to advanced hardware attacks (e.g., side-channel or bus sniffing).   |
+| **User Transparency**              | Operates silently and automatically, requiring no user intervention for most tasks.                   | Limited visibility or control for end users; troubleshooting can be difficult.               |
+| **Standardization**                | Follows ISO/IEC 11889, ensuring interoperability across vendors.                                      | Different versions (1.2 vs 2.0) and firmware implementations may cause compatibility issues. |
+
+
 **Cryptographic modules** are hardware or software components that implement encryption, decryption, hashing, and digital signature functions to protect sensitive information. They follow strict security standards, ensuring cryptographic operations are performed safely and efficiently.
 Without properly designed cryptographic modules, sensitive data like passwords, financial transactions, and confidential communications could be exposed to attackers. Weak or improperly implemented encryption can lead to data breaches and security vulnerabilities.
 
